# quayside

./: .dockerignore  .gitignore  BRAND.md  CLAUDE.md  Dockerfile  HEALTH_AUDIT.md  MARKETING.md  PORTS.md  Procfile  Quayside_Customer_Partner_Pipeline.docx  ROADMAP.md  claudechat.md  com.quayside.pipeline.plist  pyproject.toml  species_audit.py  species_audit_report.md
.github/workflows/: deploy.yml
deploy/: authorized_keys  quayside-nginx.conf  quayside-pipeline.service  quayside-pipeline.timer  quayside-quality.service  quayside-quality.timer  quayside.service  run_pipeline.sh  setup.sh  update.sh
scripts/: backfill_peterhead.py  generate_context.py  run_if_needed.sh
src/quayside/: __main__.py  confirm.py  db.py  email.py  error_actions.py  export.py  fx.py  http_cache.py  ingest.py  models.py  ports.py  quality.py  report.py  review.py  run.py  scheduler.py  species.py  template.py  trade.py
src/quayside/extractors/: __init__.py  ai.py  csv_ext.py  image.py  pdf.py  xls.py
src/quayside/scrapers/: brixham.py  cfpo.py  fraserburgh.py  lerwick.py  newlyn.py  peterhead.py  scrabster.py  swfpa.py
src/quayside/templates/: digest.html
src/quayside/web/: __init__.py  api_views.py  app.py  auth.py  digest.py  helpers.py  ops_views.py  port_views.py  public.py  trade_views.py
src/quayside/web/templates/: _chat_float.html  _howto_drawer.html  _nav_dashboard.html  ops.html  (+25 more)
tests/: test_landing.py  test_peterhead.py  test_swfpa.py
tests/fixtures/: peterhead_prices_sample.xls  peterhead_sample.html
website and email/: quayside-digest.html  quayside-landing.html
(+1 files in other folders)
