[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "quayside"
version = "0.1.0"
description = "UK fish auction data pipeline"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "xlrd>=2.0",
    "pdfplumber>=0.11",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
